--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=IIS-DO-2021-2022_IT1-2019-Dragan-Rankov
-sonar.organization=iis-do-2021-2022
+sonar.projectKey=UIIS2023_do-test
+sonar.organization=uiis2023
 sonar.sources=DizajnerskiObrasci/src
 sonar.java.binaries=DizajnerskiObrasci/bin
